<resources>
    <string name="app_name">Mad Mad Max</string>
    <string name="bt_device_menu">Bluetooth Device</string>
    <string name="menu_status">Service status</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="service_status">Service status:</string>
    <string name="device_name">Device name</string>
    <string name="register_button">Register</string>
    <string name="no_empty_device_name">Device name cannot be empty</string>
    <string name="title_activity_settings">Settings</string>
    <string name="reg_success">Registration success</string>
    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_base_url">Base URL</string>
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <string name="exit_confirmation">Are you sure you want to exit?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="bluetooth_error_init">Error initializing Bluetooth device</string>


    <string name="menu_service_on">ON</string>
    <string name="menu_service_off">OFF</string>
    <string name="menu_settings">Settings</string>


    <!-- About activity-->
    <string name="about_title">About</string>
    <string name="about_version">Version:</string>

    <string name="menu_bluetooth_use_this">Use this device</string>
    <string name="menu_bluetooth_console">Console</string>

    <string name="bluetooth_activity_error_device">Weird device really</string>

    <!-- Fuel loading dialog -->

    <string name="fuel_load_hint">Code from canister</string>
    <string name="fuel_load_send">Check code</string>

    <string name="fuel_load_unknown">Unknown error, please report this to master</string>
    <string name="fuel_load_invalid_code">Invalid code, probably mistype?</string>
    <string name="fuel_load_used_code">Code has been used before, canister is empty</string>
    <string name="fuel_load_success">Successfully added fuel</string>
    <string name="fuel_load_mistype_code">Code should contain exactly 8 digits</string>
    <string name="fuel_load_comment">Fuel is slowly puring from the canister...</string>

    <string name="wait_dialog">Please wait...</string>

    <string name="repair_load_hint">Repair Kit code</string>
    <string name="repair_load_send">Check code</string>
    <string name="repair_load_unknown">Unknown error, please report this to master</string>
    <string name="repair_load_invalid_code">Invalid code, probably mistype?</string>
    <string name="repair_load_used_code">Code has been used before, Repair Kit is unusable</string>
    <string name="repair_load_success">Car has been fixed a little bit. Please pass used Repair Kit to nearest Game Master.</string>
    <string name="repair_load_mistype_code">Code should contain exactly 8 digits</string>
    <string name="repair_load_player_hint">Character code</string>
    <string name="repair_load_mistype_player_code">Error in character code</string>
    <string name="repair_load_comment">Car is being fixed. Play it.</string>

    <string name="graphic_service_should_run">Service should be running to do this</string>
    <string name="graphic_car_should_stop">Car should stop to do this</string>


    <string name="tools_check_bluetooth_unavailable">Bluetooth seems unavailable. It should be to participate in the game. NOT starting the service.</string>
    <string name="tools_check_bluetooth_disabled">It looks that Bluetooth is turned off. You should turn it on to participate in the game while it is fine for testing. Running service.</string>

    <string name="tools_check_gps_unavailable">GPS is unavailable. There\'s no point to run without GPS, canceling start</string>
    <string name="tools_check_gps_disabled">GPS is disabled. There\'s no point to run without GPS, canceling start. Please turn GPS on.</string>


    <string name="fuel_drop_description">Slide needed fuel by your finger over bar then press button to actually drop</string>
    <string name="fuel_drop_commit">Drop fuel</string>
    <string name="fuel_drop_confirm">Are you sure you want to drop fuel?</string>
    <string name="fuel_drop_comment">Fuel is slowly leaks away...</string>

    <string name="menu_fuel_load">Load fuel</string>
    <string name="menu_fuel_drop">Drop fuel</string>
    <string name="setup_here"><![CDATA[Set it here ->]]></string>
</resources>
